; ModuleID = '/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_AddListener.c'
source_filename = "/home/carl/AnghaBench/vlc/src/player/extr_player.c_vlc_player_AddListener.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i8*, %struct.vlc_player_cbs* }
%struct.TYPE_7__ = type { i32 }
%struct.vlc_player_cbs = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_8__* @vlc_player_AddListener(%struct.TYPE_7__* %0, %struct.vlc_player_cbs* %1, i8* %2) #0 {
  %4 = alloca %struct.TYPE_8__*, align 8
  %5 = alloca %struct.TYPE_7__*, align 8
  %6 = alloca %struct.vlc_player_cbs*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.TYPE_8__*, align 8
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %5, align 8
  store %struct.vlc_player_cbs* %1, %struct.vlc_player_cbs** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load %struct.vlc_player_cbs*, %struct.vlc_player_cbs** %6, align 8
  %10 = call i32 @assert(%struct.vlc_player_cbs* %9)
  %11 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %12 = call i32 @vlc_player_assert_locked(%struct.TYPE_7__* %11)
  %13 = call %struct.TYPE_8__* @malloc(i32 24)
  store %struct.TYPE_8__* %13, %struct.TYPE_8__** %8, align 8
  %14 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %15 = icmp ne %struct.TYPE_8__* %14, null
  br i1 %15, label %17, label %16

16:                                               ; preds = %3
  store %struct.TYPE_8__* null, %struct.TYPE_8__** %4, align 8
  br label %30

17:                                               ; preds = %3
  %18 = load %struct.vlc_player_cbs*, %struct.vlc_player_cbs** %6, align 8
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 2
  store %struct.vlc_player_cbs* %18, %struct.vlc_player_cbs** %20, align 8
  %21 = load i8*, i8** %7, align 8
  %22 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %23 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %22, i32 0, i32 1
  store i8* %21, i8** %23, align 8
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %5, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 0
  %28 = call i32 @vlc_list_append(i32* %25, i32* %27)
  %29 = load %struct.TYPE_8__*, %struct.TYPE_8__** %8, align 8
  store %struct.TYPE_8__* %29, %struct.TYPE_8__** %4, align 8
  br label %30

30:                                               ; preds = %17, %16
  %31 = load %struct.TYPE_8__*, %struct.TYPE_8__** %4, align 8
  ret %struct.TYPE_8__* %31
}

declare dso_local i32 @assert(%struct.vlc_player_cbs*) #1

declare dso_local i32 @vlc_player_assert_locked(%struct.TYPE_7__*) #1

declare dso_local %struct.TYPE_8__* @malloc(i32) #1

declare dso_local i32 @vlc_list_append(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
